# fff.nvim

./: .gitignore  .luarc.ci.json  .luarc.json  .mcp.json  Cargo.toml  Makefile  README.md  biome.json  empty_config.lua  flake.nix  install-mcp.sh  package-lock.json  package.json  rust-toolchain.toml  test_grep.lua  test_grep_top.lua  test_list_renderer.lua  test_normal_picker.lua  test_query_parser.lua
.cargo/: config.toml
.github/workflows/: external-tests.yml  lua-tests.yml  lua.yml  panvimdoc.yaml  release.yaml  rust.yml
benches/: README.md  indexing_and_search.rs  query_tracker_bench.rs
crates/fff-c/: Cargo.toml
crates/fff-c/src/: ffi_types.rs  lib.rs
crates/fff-core/: Cargo.toml  build.rs
crates/fff-core/benches/: bigram_bench.rs
crates/fff-core/src/: background_watcher.rs  bigram_filter.rs  case_insensitive_memmem.rs  constraints.rs  db_healthcheck.rs  error.rs  file_picker.rs  frecency.rs  git.rs  grep.rs  lib.rs  log.rs  mmap_cache.rs  path_utils.rs  query_tracker.rs  score.rs  shared.rs  sort_buffer.rs  types.rs
crates/fff-core/tests/: bigram_overlay_integration.rs  grep_integration.rs
crates/fff-grep/: Cargo.toml
crates/fff-mcp/: Cargo.toml
crates/fff-mcp/src/: cursor.rs  main.rs  output.rs  server.rs
crates/fff-nvim/: Cargo.toml
crates/fff-nvim/benches/: indexing_and_search.rs  query_tracker_bench.rs
crates/fff-nvim/src/: db_healthcheck.rs  error.rs  git.rs  lib.rs  log.rs  lua_types.rs  path_shortening.rs  score.rs
crates/fff-query-parser/: Cargo.toml  EXAMPLES.md  README.md
crates/fff-query-parser/benches/: parse_bench.rs
crates/fff-query-parser/src/: config.rs  constraints.rs  lib.rs  parser.rs
crates/fff-searcher/: Cargo.toml
crates/fff-searcher/src/: lib.rs  lines.rs  sink.rs
crates/fff-searcher/src/searcher/: core.rs  glue.rs  mod.rs
data/filetypes/: builtin.lua
doc/: fff.nvim.txt
lua/fff/: buffers.lua  colors.lua  combo_renderer.lua  conf.lua  config.lua  core.lua  download.lua  file_renderer.lua  filetype.lua  fuzzy.lua  git_utils.lua  list_renderer.lua  location_utils.lua  main.lua  picker_ui.lua  scrollbar.lua  treesitter_hl.lua  utils.lua
lua/fff/file_picker/: icons.lua  image.lua  init.lua  preview.lua
lua/fff/grep/: grep_renderer.lua  init.lua
lua/fff/rust/: background_watcher.rs  error.rs  file_picker.rs  frecency.rs  git.rs  init.lua  lib.rs  location.rs  log.rs  path_utils.rs  query_tracker.rs  score.rs  search_results.rs  tracing.rs  types.rs
lua/fff/ui/: default.lua  mini.lua
plugin/: fff.lua
scripts/: benchmark-claude.sh  determine-version.sh  release.sh
tests/: clear_cache_spec.lua  fff_core_spec.lua  find_in_git_root_spec.lua
