[workspace]
members = [
  "crates/fff-c",
  "crates/fff-core",
  "crates/fff-nvim",
  "crates/fff-query-parser",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies
ahash = "0.8"
blake3 = "1.8.2"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4.2"
dirs = "5.0"
dunce = "1.0"
# git2 - base config without TLS (each crate adds platform-specific TLS)
git2 = { version = "0.20.2", default-features = false, features = [
  "vendored-libgit2",
] }
glidesort = "0.1"
heed = "0.22.0"
ignore = "0.4.22"
mimalloc = "0.1.47"

mlua = { version = "0.11.1", features = ["module", "luajit"] }
neo_frizbee = { version = "0.7.2" }
notify = "8.1.0"
notify-debouncer-full = "0.7"
once_cell = "1.20.2"
parking_lot = "0.12"
pathdiff = "0.2.1"
rayon = "1.8.0"
smallvec = { version = "1.13", features = ["const_generics", "union"] }
thiserror = "2.0.10"
tracing = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
