[package]
name = "fff-c"
version = "0.1.0"
edition = "2024"
description = "C FFI bindings for fff-core - use from any language with C FFI support"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Local crates
fff-core = { path = "../fff-core" }
fff-query-parser = { path = "../fff-query-parser" }

# Workspace dependencies
mimalloc = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
git2 = { workspace = true }
dirs = { workspace = true }

# Serialization for complex types
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
