[package]
name = "fff-c"
version = "0.1.0"
edition = "2024"
description = "Raw C api of FFF file finder"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
default = []
zlob = ["fff/zlob"]

[dependencies]
mimalloc.workspace = true
tracing.workspace = true
git2.workspace = true

fff = { path = "../fff-core" }
fff-query-parser = { path = "../fff-query-parser" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
