[package]
name = "fff-query-parser"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []
zlob = ["dep:zlob"]

[dependencies]
smallvec = { workspace = true }
zlob = { workspace = true, optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse_bench"
harness = false
